--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,17 +1,25 @@
 :root {
   --pal-green-50: #2a9d4c;
+
   --pal-orange-50: #d45202;
+
   --pal-blue-50: #2582d0;
+  
   --pal-yellow-50: #b27e00;
+
+  --pal-purple-95: #f9f2fd;
+  --pal-purple-70: #c289e6;
   --pal-purple-50: #9247c2;
   --pal-purple-40: #7b3ba5;
   --pal-purple-30: #5c2a7e;
   --pal-purple-20: #421560;
   --pal-purple-10: #2b0e3f;
+
   --pal-neutral-100: #ffffff;
   --pal-neutral-95: #f6f4f6;
   --pal-neutral-93: #efebef;
   --pal-neutral-90: #dfdae1;
+  --pal-neutral-70: #afa4b4;
   --pal-neutral-60: #94879b;
   --pal-neutral-50: #7d7184;
   --pal-neutral-40: #6b6071;
@@ -30,19 +38,42 @@
   --sys-fg-secondary: var(--pal-neutral-40);
   --sys-fg-tertiary: var(--pal-neutral-60);
   --sys-fg-on-color: var(--pal-neutral-100);
+  --sys-fg-on-disabled: var(--pal-neutral-70);
 
   --sys-bg-surface: var(--pal-neutral-100);
   --sys-bg-minimal: var(--pal-neutral-95);
 
   --sys-neutral-base: var(--pal-neutral-50);
+
   --sys-interactive-base: var(--pal-purple-50);
+  --sys-interactive-highlight: var(--pal-purple-70);
+  --sys-interactive-minimal: var(--pal-purple-95);
+
   --sys-warning-base: var(--pal-yellow-50);
+
   --sys-info-base: var(--pal-blue-50);
+
   --sys-orange-base: var(--pal-orange-50);
+
   --sys-success-base: var(--pal-green-50);
 
   --sys-border-minimal: var(--pal-neutral-93);
   --sys-border-subtle: var(--pal-neutral-90);
+  --sys-border-on-contrast: var(--pal-neutral-95);
 
   --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+
+
+  --text-body: var(--sys-fg-base);
+  --text-secondary: var(--sys-fg-secondary);
+  --text-on-color: var(--sys-fg-on-color);
+  --border-on-contrast: var(--sys-border-on-contrast);
+  --background-primary: var(--sys-bg-surface);
+  --background-secondary: var(--sys-bg-minimal);
+  --icon-secondary: var(--sys-fg-secondary);
+  --icon-tertiary: var(--sys-fg-tertiary);
+  --border-ragular: var(--sys-border-subtle);
+  --border-minimal: var(--sys-border-minimal);
+  --input-text-placeholder: var(--sys-fg-on-disabled);
+
 }
