fix footer margin

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -105,6 +105,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   padding: 1rem 1.25rem;
   display: flex;
   height: 2.5rem;
+  align-items: center;
 }
 
 .site-footer .copyright {
@@ -133,7 +134,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
 .site-footer .footer-links {
   display: flex;
   gap: 0.75rem;
-  margin-left: auto;
+  margin: 0 0 0 auto;
   list-style: none;
 }
 .site-footer .footer-links li {
