portal mobile view

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -20,7 +20,13 @@
 
 .portal .site-header-navbar .navbar-container .navbar-header {
   float: none;
+  display: flex;
+  align-items: center;
 }
+.navbar-toggle {
+  display: none;
+}
+
 .portal .site-header-navbar .navbar-container .logotype-container {
   float: none !important;
 } 
@@ -84,6 +90,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   box-shadow: 0px 0px 0px 2px var(--sys-interactive-highlight);
 }
 
+@import './footer.css';
 
 .portal main {
   display: flex;
@@ -92,65 +99,10 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   background-color: var(--background-secondary);
 }
 
-
 .portal .site-footer {
   margin-top: auto;
   display: block;
   background: var(--background-primary);
-}
-
-.site-footer .inner {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 1rem 1.25rem;
-  display: flex;
-  height: 2.5rem;
-  align-items: center;
-}
-
-.site-footer .copyright {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  color: var(--text-secondary);
-  text-align: center;
-  width: auto;
-  margin: 0;
-  display: flex;
-  align-items: center;
-
-  float: none;
-}
-.site-footer .copyright::before {
-  content: "";
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: var(--icon-secondary);
-  margin-right: 0.5rem;
-  mask-image: url("../images/icon-bitbot-24px.svg");
-  mask-size: cover;
-}
-
-.site-footer .footer-links {
-  display: flex;
-  gap: 0.75rem;
-  margin: 0 0 0 auto;
-  list-style: none;
-}
-.site-footer .footer-links li {
-  margin: 0;
-  padding: 0;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: normal;
-  color: var(--text-secondary);
-}
-.site-footer .footer-links li a {
-  color: inherit;
-  text-decoration: none;
-}
-.site-footer .footer-links li a:hover {
-  text-decoration: underline;
 }
 
 
@@ -159,6 +111,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   background: var(--background-primary);
   color: var(--text-body);
   text-align: left;
+  height: auto;
 }
 
 .portal-header .portal-header-top {
@@ -172,23 +125,26 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   color: var(--text-on-color);
 }
 
-.portal-header .portal-header-top .portal-header-top-inner {
+.portal-header .portal-header-top .portal-header-top-inner,
+.portal-header .portal-header-bottom .portal-header-bottom-inner {
   margin-top: 0;
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem 1.25rem 3rem 1.25rem;
   display: flex;
 }
-.portal-header .portal-header-top .portal-header-top-inner .portal-header-top-left {
+
+.portal-header .portal-header-left {
   max-width: 600px;
 }
-.portal-header .portal-header-top .portal-header-top-inner .portal-header-top-right {
+.portal-header .portal-header-right {
   width: 100%;
   max-width: 512px;
   position: relative;
   margin-left: auto;
+  display: none;
 }
-.portal-header .portal-header-top .portal-header-top-inner .portal-header-top-right img {
+.portal-header .portal-header-right img {
   position: absolute;
 }
 
@@ -231,6 +187,8 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.25rem;
+  width: 100%;
+  color: var(--text-body);
 }
 
 .portal-header .portal-header-top .portal-header-top-inner .portal-search input::placeholder {
@@ -246,14 +204,6 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   mask-image: url("../images/icon-magnifier-24px.svg");
   mask-size: cover;
   mask-repeat: no-repeat;
-}
-
-.portal-header .portal-header-bottom .portal-header-bottom-inner {
-  margin-top: 0;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem 1.25rem 2rem 1.25rem;
-  position: relative;
 }
 
 .portal-header .portal-header-bottom .portal-header-bottom-inner h2 {
@@ -278,7 +228,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
 }
 
 .portal-body .portal-body-inner {
-  padding: 2rem 0 3rem 0;
+  padding: 2rem 1.25rem 3rem 1.25rem;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
@@ -424,5 +374,19 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   .portal-card:nth-child(4),
   .portal-card:nth-child(5) {
     width: calc((100% - 3rem) / 3);
+  }
+}
+
+@media (min-width: 900px) {
+  .portal-header .portal-header-right {
+    display: block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .portal-body .portal-body-inner {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
