--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -8,6 +8,7 @@
   --pal-yellow-50: #b27e00;
 
   --pal-purple-95: #f9f2fd;
+  --pal-purple-93: #f3e7f9;
   --pal-purple-70: #c289e6;
   --pal-purple-50: #9247c2;
   --pal-purple-40: #7b3ba5;
@@ -42,12 +43,14 @@
 
   --sys-bg-surface: var(--pal-neutral-100);
   --sys-bg-minimal: var(--pal-neutral-95);
+  --sys-bg-subtle: var(--pal-neutral-93);
 
   --sys-neutral-base: var(--pal-neutral-50);
 
   --sys-interactive-base: var(--pal-purple-50);
   --sys-interactive-highlight: var(--pal-purple-70);
   --sys-interactive-minimal: var(--pal-purple-95);
+  --sys-intercative-subtle: var(  --pal-purple-93);
 
   --sys-warning-base: var(--pal-yellow-50);
 
@@ -65,15 +68,24 @@
 
 
   --text-body: var(--sys-fg-base);
+  --text-primary: var(--sys-fg-primary);
   --text-secondary: var(--sys-fg-secondary);
+  --text-link: var(--sys-interactive-base);
   --text-on-color: var(--sys-fg-on-color);
+  --border-regular: var(--sys-border-subtle);
   --border-on-contrast: var(--sys-border-on-contrast);
   --background-primary: var(--sys-bg-surface);
   --background-secondary: var(--sys-bg-minimal);
+  --background-tertiary: var(--sys-bg-subtle);
+  --background-selected: var(--sys-interactive-minimal);
+  --background-selected-hover: var(--sys-intercative-subtle);
+  --icon-primary: var(--sys-fg-primary);
   --icon-secondary: var(--sys-fg-secondary);
   --icon-tertiary: var(--sys-fg-tertiary);
+  --icon-interactive: var(--sys-interactive-base);
   --border-ragular: var(--sys-border-subtle);
   --border-minimal: var(--sys-border-minimal);
+  --border-selected: var(--sys-interactive-base);
   --input-text-placeholder: var(--sys-fg-on-disabled);
 
 }
