--- a/src/css/base.css
+++ b/src/css/base.css
@@ -10,8 +10,16 @@ h1, h2, h3, h4, h5 {
   margin: 0;
 }
 
+h3 {
+  font-weight: 700;
+  font-size: 1.1875rem;
+  line-height: 1.75rem; 
+  color: var(--text-primary);
+}
+
+
 html, body {
   font-size: 16px;
-  font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   color: var(--sys-fg-base);
 }
