--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,392 +1,6 @@
 @import './base.css';
-
-.portal .site-header {
-  display: block;
-}
-
-.portal .site-header-navbar {
-  background-color: var(--sys-primary-emphasized);
-  height: 3rem;
-}
-
-.portal .site-header-navbar .navbar-container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1.25rem;
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-
-.portal .site-header-navbar .navbar-container .navbar-header {
-  float: none;
-  display: flex;
-  align-items: center;
-}
-.navbar-toggle {
-  display: none;
-}
-
-.portal .site-header-navbar .navbar-container .logotype-container {
-  float: none !important;
-} 
-.portal .site-header-navbar .navbar-container .navbar-brand {
-  float: none;
-}
-.portal .site-header-navbar .navbar-container .navbar-brand img {
-  float: none;
-  height: 24px;;
-}
-
-.portal .site-header-navbar .navbar-container .navbar-collapse {
-  margin-left: auto;
-}
-
-ul.top-nav-menu.sm.sm-simple {
-  display: flex;;
-  padding: 0 .5rem;
-  gap: 1rem;
-  float: none;
-}
-
-ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) {
-  margin: 0;
-}
-
-ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) > .external-top-nav-link {
-  margin: 0;
-
-  display: flex;
-  padding: .375rem .5rem;
-  height: 2rem;
-  align-items: center;
-  justify-content: center;
-  gap: .25rem;
-
-  font-weight: 600;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-
-  border-radius: 0.25rem;
-  border: 1px solid rgba(255, 255, 255, 0.50);
-  background: rgba(255, 255, 255, 0.10) !important;
-  color: var(--text-on-color) !important;
-}
-ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) > .external-top-nav-link:active,
-ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) > .external-top-nav-link:hover {
-  background: rgba(0, 0, 0, 0.10) !important;
-  color: var(--text-on-color) !important;
-}
-ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link {
-  background: var(--background-primary) !important;
-  color: var(--sys-primary-emphasized) !important;
-}
-ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:active,
-ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:hover {
-  background: var(--sys-interactive-minimal) !important;
-  color: var(--sys-primary-emphasized) !important;
-}
-ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
-  box-shadow: 0px 0px 0px 2px var(--sys-interactive-highlight);
-}
-
+@import './header.css';
+@import './sidebar.css';
 @import './footer.css';
 
-.portal main {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: var(--background-secondary);
-}
-
-.portal .site-footer {
-  margin-top: auto;
-  display: block;
-  background: var(--background-primary);
-}
-
-
-.portal-header {
-  padding: 3rem 0 0 0;
-  background: var(--background-primary);
-  color: var(--text-body);
-  text-align: left;
-  height: auto;
-}
-
-.portal-header .portal-header-top {
-  background-image: linear-gradient(
-    to right,
-    var(--pal-purple-40) 0%,
-    var(--pal-purple-30) 50%,
-    var(--pal-purple-20) 100%
-  );
-  position: relative;
-  color: var(--text-on-color);
-}
-
-.portal-header .portal-header-top .portal-header-top-inner,
-.portal-header .portal-header-bottom .portal-header-bottom-inner {
-  margin-top: 0;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem 1.25rem 3rem 1.25rem;
-  display: flex;
-}
-
-.portal-header .portal-header-left {
-  max-width: 600px;
-}
-.portal-header .portal-header-right {
-  width: 100%;
-  max-width: 512px;
-  position: relative;
-  margin-left: auto;
-  display: none;
-}
-.portal-header .portal-header-right img {
-  position: absolute;
-}
-
-.portal-header .portal-header-top .portal-header-top-inner h1 {
-  font-weight: 700;
-  font-size: 2.25rem;
-  line-height: 3rem;
-  margin: 0;
-}
-.portal-header .portal-header-top .portal-header-top-inner p {
-  max-width: 600px;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  margin: 0.25rem 0 1.5rem 0;
-  color: var(--border-on-contrast);
-}
-
-.portal-header .portal-header-top .portal-header-top-inner .portal-search {
-  display: flex;
-  background: var(--background-primary);
-  height: 2.5rem;
-  padding: 0.75rem 0.75rem 0.75rem 0.5rem;
-  margin-top: 1.5rem;
-
-  border-radius: 0.25rem;
-  border: 1px solid var(--border-ragular);
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10) inset;
-  
-  align-items: center;
-  justify-content: start;
-  gap: 0.5rem;
-  max-width: 600px;
-}
-
-.portal-header .portal-header-top .portal-header-top-inner .portal-search input {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  outline: 0;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.25rem;
-  width: 100%;
-  color: var(--text-body);
-}
-
-.portal-header .portal-header-top .portal-header-top-inner .portal-search input::placeholder {
-  color: var(--input-text-placeholder);
-}
-
-.portal-header .portal-header-top .portal-header-top-inner .portal-search::before {
-  content: "";
-  display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: var(--icon-tertiary);
-  mask-image: url("../images/icon-magnifier-24px.svg");
-  mask-size: cover;
-  mask-repeat: no-repeat;
-}
-
-.portal-header .portal-header-bottom .portal-header-bottom-inner h2 {
-  max-width: 600px;
-  color: var(--sys-primary-emphasized);
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 2.5rem;
-  margin: 0;
-}
-
-.portal-header .portal-header-bottom .portal-header-bottom-inner p {
-  max-width: 600px;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  margin: 1rem 0 0.5rem 0;
-}
-
-.portal-body {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.portal-body .portal-body-inner {
-  padding: 2rem 1.25rem 3rem 1.25rem;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-}
-
-.portal-card {
-  width: 100%;
-  border-radius: 8px;
-  background: var(--background-primary);
-  box-shadow: var(--elevation-sm);
-  border: 1px solid var(--border-minimal);
-  padding: 1.25rem 3rem 1.25rem 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.portal-card-header {
-  position: relative;
-  padding-left: 3.25rem;
-}
-
-.portal-card-header h3 {
-  position: relative;
-}
-.portal-card-header h3 a {
-  font-size: 1.1875rem;
-  font-weight: 700;
-  line-height: 1.75rem;
-  color: var(--text-primary);
-}
-.portal-card-header h3 a:hover {
-  color: var(--sys-interactive-base);
-  text-decoration: underline;
-}
-
-.portal-card-header p {
-  color: var(--text-secondary);
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.portal-card-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: var(--sys-bg-minimal);
-  border-radius: .5rem;
-  padding: .5rem;
-}
-.portal-card-header::after {
-  content: "";
-  position: absolute;
-  top: 0.5rem;
-  left: 0.5rem;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: var(--sys-neutral-base);
-  mask-size: cover;
-}
-
-/* Bitrise as a Platform */
-.portal-card[data-section="bitrise-as-a-platform"] .portal-card-header::before {
-  background-color: var(--brand-purple-lightest);
-}
-.portal-card[data-section="bitrise-as-a-platform"] .portal-card-header::after {
-  background-color: var(--sys-interactive-base);
-  mask-image: url("../images/icon-dashboard-24px.svg");
-}
-
-/* Bitrise CI */
-.portal-card[data-section="bitrise-ci"] .portal-card-header::before {
-  background-color: var(--brand-orage-light);
-}
-.portal-card[data-section="bitrise-ci"] .portal-card-header::after {
-  background-color: var(--sys-orange-base);
-  mask-image: url("../images/icon-ci-24px.svg");
-}
-
-/* Bitrise Build Cache */
-.portal-card[data-section="bitrise-build-cache"] .portal-card-header::before {
-  background-color: var(--brand-yellow-lightest);
-}
-.portal-card[data-section="bitrise-build-cache"] .portal-card-header::after {
-  background-color: var(--sys-warning-base);
-  mask-image: url("../images/icon-build-cache-24px.svg");
-}
-
-/* Bitrise Release Management */
-.portal-card[data-section="bitrise-release-management"] .portal-card-header::before {
-  background-color: var(--brand-blue-lightest);
-}
-.portal-card[data-section="bitrise-release-management"] .portal-card-header::after {
-  background-color: var(--sys-info-base);
-  mask-image: url("../images/icon-release-24px.svg");
-}
-
-/* Bitrise Insights */
-.portal-card[data-section="bitrise-insights"] .portal-card-header::before {
-  background-color: var(--brand-green-lightest);
-}
-.portal-card[data-section="bitrise-insights"] .portal-card-header::after {
-  background-color: var(--sys-success-base);
-  mask-image: url("../images/icon-insights-24px.svg");
-}
-
-.portal-card ul.portal-card-links {
-  padding: 0 0 1.25rem 0;
-  margin: 0 0 0 3.25rem;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-.portal-card ul.portal-card-links li {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.25rem;
-}
-
-.portal-card ul.portal-card-links li a {
-  color: var(--sys-interactive-base);
-  text-decoration: none;
-}
-
-@media (min-width: 768px) {
-  .portal-card:nth-child(1),
-  .portal-card:nth-child(2) {
-    width: calc((100% - 1.5rem) / 2);
-
-    & ul.portal-card-links li {
-      width: calc((100% - 0.5rem) / 2);
-    }
-  }
-
-  .portal-card:nth-child(3),
-  .portal-card:nth-child(4),
-  .portal-card:nth-child(5) {
-    width: calc((100% - 3rem) / 3);
-  }
-}
-
-@media (min-width: 900px) {
-  .portal-header .portal-header-right {
-    display: block;
-    width: 100%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .portal-body .portal-body-inner {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
+@import './portal.css';
