sidebar links + build script fix

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -116,9 +116,22 @@
           }
         }
       }
+
       & > ul li.opened > a {
         & .glyphicon::before {
           mask-image: url("../images/icon-chevron-up-16px.svg");
+        }
+      }
+
+      &.sidebar-links {
+        margin-top: auto;
+        padding: 0.75rem 0;
+        border-top: 1px solid var(--border-regular);
+
+        & > ul li > a {
+          & .glyphicon::before {
+            mask-image: url("../images/icon-arrow-northeast-16px.svg");
+          }
         }
       }
 
@@ -195,6 +208,12 @@
         }
         &[data-permalink="bitrise-ci/references.html"]::before {
           mask-image: url("../images/icon-book-16px.svg");
+        }
+        &[data-externallink="integrations"]::before {
+          mask-image: url("../images/icon-step-16px.svg");
+        }
+        &[data-externallink="workflow-recipes"]::before {
+          mask-image: url("../images/icon-workflow-16px.svg");
         }
 
 
