sidebars and footer

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,3 +4,33 @@
 @import './footer.css';
 
 @import './portal.css';
+
+.site-body-container {
+  padding: 0;
+
+  .site-body-row {
+    margin: 0;
+    padding: 0;
+    display: flex
+  }
+}
+
+.site-content,
+.fixed-toolbar .site-content {
+  padding-top: 0;
+  margin-left: var(--sidebar-width);
+
+  & .toolbar {
+    display: none;
+  }
+
+  & article[data-is-hub="true"] .breadcrumb-container {
+    display: none;
+  }
+
+  .site-footer {
+    background-color: var(--background-secondary);
+  }
+}
+
+
