--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,5 +1,9 @@
+:root {
+  --sidebar-width: 320px;
+}
+
 .site-body .site-sidebar {
-  width: 320px;
+  width: var(--sidebar-width);
 
   & .site-sidebar-header {
     height: var(--header-height);
@@ -29,8 +33,18 @@
       flex-direction: column;
       gap: 0.5rem;
 
-      & h3 {
+      & .sidebar-heading a {
+        display: block;
         padding: 0.325rem 0;
+        font-size: 1.1875rem;
+        line-height: 1.75rem;
+        font-weight: 700;
+        color: var(--text-primary);
+
+        &:hover {
+          color: var(--text-link-hover);
+          text-decoration: underline;
+        }
       }
 
       & .sidebar-back-link {
@@ -63,6 +77,7 @@
         display: none;
       }
 
+      /* Main menu items */
       & > ul li,
       & > ul li.opened {
         & > a {
@@ -103,8 +118,26 @@
               mask-image: url("../images/icon-chevron-down-16px.svg");
             }
           }
+
+          /* Submenu L1 */
+          &[data-topic-level="3"] {
+            padding-left: 3.75rem;
+          }
+
+          /* Submenu L2 */
+          &[data-topic-level="4"] {
+            padding-left: 4.5rem;
+          }
         }
 
+        /* Opened menu items */
+        & > ul li.opened > a {
+          & .glyphicon::before {
+            mask-image: url("../images/icon-chevron-up-16px.svg");
+          }
+        }
+
+        /* Active menu items */
         &.active > a {
           background-color: var(--background-selected);
           color: var(--text-primary);
@@ -114,27 +147,14 @@
           &:hover {
             background-color: var(--background-selected-hover);
           }
-        }
-      }
 
-      & > ul li.opened > a {
-        & .glyphicon::before {
-          mask-image: url("../images/icon-chevron-up-16px.svg");
-        }
-      }
-
-      &.sidebar-links {
-        margin-top: auto;
-        padding: 0.75rem 0;
-        border-top: 1px solid var(--border-regular);
-
-        & > ul li > a {
-          & .glyphicon::before {
-            mask-image: url("../images/icon-arrow-northeast-16px.svg");
+          &::before {
+            background-color: var(--icon-interactive);
           }
         }
       }
 
+      /* Submenu L1 */
       & > ul > li > a,
       & > ul > li.opened > a {
         padding: 0.5rem 3.5rem 0.5rem 1.5rem;
@@ -167,6 +187,9 @@
         }
         &[data-permalink="bitrise-platform/apps.html"]::before {
           mask-image: url("../images/icon-folder-16px.svg");
+        }
+        &[data-permalink="--infrastructure--"]::before {  /* TODO: Update this permalink */
+          mask-image: url("../images/icon-cpu-16px.svg");
         }
         &[data-permalink="bitrise-platform/connectivity.html"]::before {
           mask-image: url("../images/icon-arrows-horizontal-16px.svg");
@@ -216,18 +239,81 @@
           mask-image: url("../images/icon-workflow-16px.svg");
         }
 
+        /* Icons for Bitrias Build Cache subpages */
+        &[data-permalink="bitrise-build-cache/remote-build-caching.html"]::before {
+          mask-image: url("../images/icon-power-16px.svg");
+        }
+        &[data-permalink="--invocations--"]::before {  /* TODO: Update this permalink */
+          mask-image: url("../images/icon-tasks-16px.svg");
+        }
+        &[data-permalink="bitrise-build-cache/remote-build-cache-for-gradle.html"]::before {
+          mask-image: url("../images/icon-gradle-16px.svg");
+        }
+        &[data-permalink="bitrise-build-cache/remote-build-cache-for-bazel.html"]::before {
+          mask-image: url("../images/icon-bazel-16px.svg");
+        }
+        &[data-permalink="--xcode--"]::before {  /* TODO: Update this permalink */
+          mask-image: url("../images/icon-xcode-16px.svg");
+        }
+        &[data-permalink="bitrise-build-cache/insights.html"]::before {
+          mask-image: url("../images/icon-insights-16px.svg");
+        }
+        &[data-permalink="--api--"]::before {  /* TODO: Update this permalink */
+          mask-image: url("../images/icon-code-16px.svg");
+        }
+
+        /* Icons for Bitrias Release Management subpages */
+        &[data-permalink="release-management/getting-started-with-release-management.html"]::before {
+          mask-image: url("../images/icon-power-16px.svg");
+        }
+        &[data-permalink="release-management/configuring-connected-apps.html"]::before {
+          mask-image: url("../images/icon-overview-16px.svg");
+        }
+        &[data-permalink="release-management/uploading-installable-artifacts.html"]::before {
+          mask-image: url("../images/icon-install-16px.svg");
+        }
+        &[data-permalink="release-management/build-distribution.html"]::before {
+          mask-image: url("../images/icon-group-16px.svg");
+        }
+        &[data-permalink="release-management/releases.html"]::before {
+          mask-image: url("../images/icon-release-16px.svg");
+        }
+        &[data-permalink="release-management/release-management-api.html"]::before {
+          mask-image: url("../images/icon-code-16px.svg");
+        }
+
+        /* Icons for Bitrias Insights subpages */
+        &[data-permalink="insights/getting-started-with-insights.html"]::before {
+          mask-image: url("../images/icon-power-16px.svg");
+        }
+        &[data-permalink="insights/available-metrics-in-insights.html"]::before {
+          mask-image: url("../images/icon-gauge-16px.svg");
+        }
+        &[data-permalink="insights/configuring-alerts-in-insights.html"]::before {
+          mask-image: url("../images/icon-siren-16px.svg");
+        }
+        &[data-permalink="insights/git-insights.html"]::before {
+          mask-image: url("../images/icon-git-16px.svg");
+        }
+        &[data-permalink="insights/insights-tutorials.html"]::before {
+          mask-image: url("../images/icon-book-16px.svg");
+        }
 
         &:active::before {
           background-color: var(--icon-primary);
         }
-
-        &.active {
-          background-color: var(--icon-interactive);
-        }
       }
 
-      & > ul > li.opened > ul > li > a {
-        padding-left: 3.75rem;
+      &.sidebar-links {
+        margin-top: auto;
+        padding: 0.75rem 0;
+        border-top: 1px solid var(--border-regular);
+
+        & > ul li > a {
+          & .glyphicon::before {
+            mask-image: url("../images/icon-arrow-northeast-16px.svg");
+          }
+        }
       }
     }
   }
