--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,4 +1,7 @@
 :root {
+
+  /* -------- Color Palette -------- */
+
   --pal-green-50: #2a9d4c;
 
   --pal-orange-50: #d45202;
@@ -26,11 +29,15 @@
   --pal-neutral-40: #6b6071;
   --pal-neutral-10: #201b22;
 
+  /* -------- Brand Colors -------- */
+
   --brand-purple-lightest: #f6eaff;
   --brand-blue-lightest: #d7f5ff;
   --brand-green-lightest: #dbfff3;
   --brand-yellow-lightest: #fff4cd;
   --brand-orage-light: #ffd7c9;
+
+  /* -------- System Colors -------- */
 
   --sys-primary-emphasized: var(--pal-purple-30);
 
@@ -48,9 +55,14 @@
   --sys-neutral-base: var(--pal-neutral-50);
 
   --sys-interactive-base: var(--pal-purple-50);
+  --sys-interactive-strong: var(--pal-purple-40);
   --sys-interactive-highlight: var(--pal-purple-70);
   --sys-interactive-minimal: var(--pal-purple-95);
   --sys-intercative-subtle: var(  --pal-purple-93);
+
+  --sys-border-minimal: var(--pal-neutral-93);
+  --sys-border-subtle: var(--pal-neutral-90);
+  --sys-border-on-contrast: var(--pal-neutral-95);
 
   --sys-warning-base: var(--pal-yellow-50);
 
@@ -60,32 +72,34 @@
 
   --sys-success-base: var(--pal-green-50);
 
-  --sys-border-minimal: var(--pal-neutral-93);
-  --sys-border-subtle: var(--pal-neutral-90);
-  --sys-border-on-contrast: var(--pal-neutral-95);
-
-  --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
-
+  /* -------- Shorthands -------- */
 
   --text-body: var(--sys-fg-base);
   --text-primary: var(--sys-fg-primary);
   --text-secondary: var(--sys-fg-secondary);
-  --text-link: var(--sys-interactive-base);
   --text-on-color: var(--sys-fg-on-color);
-  --border-regular: var(--sys-border-subtle);
-  --border-on-contrast: var(--sys-border-on-contrast);
+  --text-link: var(--sys-interactive-base);
+  --text-link-hover: var(--sys-interactive-strong);
+
   --background-primary: var(--sys-bg-surface);
   --background-secondary: var(--sys-bg-minimal);
   --background-tertiary: var(--sys-bg-subtle);
   --background-selected: var(--sys-interactive-minimal);
   --background-selected-hover: var(--sys-intercative-subtle);
+
+  --border-regular: var(--sys-border-subtle);
+  --border-minimal: var(--sys-border-minimal);
+  --border-selected: var(--sys-interactive-base);
+  --border-on-contrast: var(--sys-border-on-contrast);
+
   --icon-primary: var(--sys-fg-primary);
   --icon-secondary: var(--sys-fg-secondary);
   --icon-tertiary: var(--sys-fg-tertiary);
   --icon-interactive: var(--sys-interactive-base);
-  --border-ragular: var(--sys-border-subtle);
-  --border-minimal: var(--sys-border-minimal);
-  --border-selected: var(--sys-interactive-base);
+
   --input-text-placeholder: var(--sys-fg-on-disabled);
 
+  /* -------- Elevation -------- */
+
+  --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
 }
