--- a/src/css/global.css
+++ b/src/css/global.css
@@ -11,26 +11,59 @@
   .site-body-row {
     margin: 0;
     padding: 0;
-    display: flex
+    display: flex;
   }
 }
 
 .site-content,
 .fixed-toolbar .site-content {
-  padding-top: 0;
-  margin-left: var(--sidebar-width);
+  padding: 0;
+  margin: 0 0 0 var(--sidebar-width);
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - var(--header-height));
 
-  & .toolbar {
-    display: none;
-  }
-
-  & article[data-is-hub="true"] .breadcrumb-container {
+  .toolbar {
     display: none;
   }
 
   .site-footer {
     background-color: var(--background-secondary);
+    float: none;
+    width: auto;
+    margin-top: auto;
+  }
+
+  main {
+    display: flex;
+
+    aside.section-nav-container {
+      width: 272px;
+      padding-right: 2rem;
+    }
+
+    article {
+      margin: 0;
+      padding: 0;
+      
+      &#content-wrapper {
+        max-width: 720px;
+        margin-right: calc(272px + 2rem);
+      }
+
+      &#search-result-wrapper {
+        display: none;
+      }
+
+      &.topic {
+        display: block;
+        padding: 3rem;
+        width: 100%;
+      }
+    }
   }
 }
 
-
+@import './hub.css';
