--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -11,6 +11,11 @@ body[data-subpage="portal"] {
     margin-top: auto;
     display: block;
     background: var(--background-primary);
+
+    & .inner {
+      max-width: 1440px;
+      margin: 0 auto;
+    }
   }
 
 
