--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -4,6 +4,8 @@
 
 .site-body .site-sidebar {
   width: var(--sidebar-width);
+  float: none;
+  height: 100vh !important;
 
   & .site-sidebar-header {
     height: var(--header-height);
