--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -23,6 +23,7 @@
   --pal-neutral-95: #f6f4f6;
   --pal-neutral-93: #efebef;
   --pal-neutral-90: #dfdae1;
+  --pal-neutral-80: #c9c1cd;
   --pal-neutral-70: #afa4b4;
   --pal-neutral-60: #94879b;
   --pal-neutral-50: #7d7184;
@@ -51,6 +52,7 @@
   --sys-bg-surface: var(--pal-neutral-100);
   --sys-bg-minimal: var(--pal-neutral-95);
   --sys-bg-subtle: var(--pal-neutral-93);
+  --sys-bg-moderate: var(--pal-neutral-90);
 
   --sys-neutral-base: var(--pal-neutral-50);
 
@@ -63,6 +65,8 @@
   --sys-border-minimal: var(--pal-neutral-93);
   --sys-border-subtle: var(--pal-neutral-90);
   --sys-border-on-contrast: var(--pal-neutral-95);
+  --sys-border-strong: var(--pal-neutral-80);
+  --sys-border-emphasized: var(--pal-neutral-70);
 
   --sys-warning-base: var(--pal-yellow-50);
 
@@ -98,6 +102,18 @@
   --icon-interactive: var(--sys-interactive-base);
 
   --input-text-placeholder: var(--sys-fg-on-disabled);
+
+  --button-primary-fg: var(--sys-fg-on-color);
+  --button-primary-bg: var(--sys-interactive-strong);
+  --button-primary-bg-hover: var(--sys-primary-emphasized);
+
+  --button-secondary-fg: var(--sys-fg-primary);
+  --button-secondary-bg: var(--sys-bg-surface);
+  --button-secondary-bg-hover: var(--sys-bg-subtle);
+  --button-secondary-bg-active: var(--sys-bg-moderate);
+  --button-secondary-border: var(--sys-border-strong);
+  --button-secondary-border-hover: var(--sys-border-emphasized);
+  --button-secondary-border-active: var(--sys-border-emphasized);
 
   /* -------- Elevation -------- */
 
