--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,21 +5,42 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
-
-h3 {
-  font-weight: 700;
-  font-size: 1.1875rem;
-  line-height: 1.75rem; 
-  color: var(--text-primary);
-}
-
-
 html, body {
   font-size: 16px;
   font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-  color: var(--sys-fg-base);
+  color: var(--text-body);
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: "Figtree", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  color: var(--text-primary);
+}
+
+h1 {
+  font-size: var(--heading-h1-font-size);
+  line-height: var(--heading-h1-line-height);
+  font-weight: var(--heading-h1-font-weight);
+}
+
+h2 {
+  font-size: var(--heading-h2-font-size);
+  line-height: var(--heading-h2-line-height);
+  font-weight: var(--heading-h2-font-weight);
+}
+
+h3 {
+  font-size: var(--heading-h3-font-size);
+  line-height: var(--heading-h3-line-height);
+  font-weight: var(--heading-h3-font-weight);
+}
+
+h4 {
+  font-size: var(--heading-h4-font-size);
+  line-height: var(--heading-h4-line-height);
+  font-weight: var(--heading-h4-font-weight);
+}
+
+code {
+  font-family: "Source Code Pro", "Courier New", Courier, monospace !important;
 }
