--- a/src/css/header.css
+++ b/src/css/header.css
@@ -72,15 +72,15 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(1n) > .external-top-nav-link {
   margin: 0;
 
   display: flex;
-  padding: .375rem .5rem;
+  padding: var(--button-sm-padding);
   height: 2rem !important;
   align-items: center;
   justify-content: center;
   gap: .25rem;
 
-  font-weight: 600;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: var(--button-sm-font-size);
+  line-height: var(--button-sm-line-height);
+  font-weight: var(--button-sm-font-weight);
 
   border-radius: 0.25rem;
   border: 1px solid rgba(255, 255, 255, 0.50);
