--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -65,12 +65,14 @@ body[data-subpage="portal"] {
     font-weight: 700;
     font-size: 2.25rem;
     line-height: 3rem;
+    color: var(--text-on-color);
     margin: 0;
   }
   & .portal-header .portal-header-top .portal-header-top-inner p {
     max-width: 600px;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: var(--body-lg-regular-font-size);
+    line-height: var(--body-lg-regular-line-height);
+    font-weight: var(--body-lg-regular-font-weight);
     margin: 0.25rem 0 1.5rem 0;
     color: var(--border-on-contrast);
   }
@@ -97,9 +99,9 @@ body[data-subpage="portal"] {
     margin: 0;
     border: 0;
     outline: 0;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.25rem;
+    font-size: var(--body-md-regular-font-size);
+    line-height: var(--body-md-regular-line-height);
+    font-weight: var(--body-md-regular-font-weight);
     width: 100%;
     color: var(--text-body);
   }
@@ -122,16 +124,17 @@ body[data-subpage="portal"] {
   & .portal-header .portal-header-bottom .portal-header-bottom-inner h2 {
     max-width: 600px;
     color: var(--sys-primary-emphasized);
-    font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 2.5rem;
+    font-weight: var(--heading-h2-font-weight);
+    font-size: var(--heading-h2-font-size);
+    line-height: var(--heading-h2-line-height);
     margin: 0;
   }
 
   & .portal-header .portal-header-bottom .portal-header-bottom-inner p {
     max-width: 600px;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: var(--body-lg-regular-font-size);
+    line-height: var(--body-lg-regular-line-height);
+    font-weight: var(--body-lg-regular-font-weight);
     margin: 1rem 0 0.5rem 0;
   }
 
@@ -180,8 +183,9 @@ body[data-subpage="portal"] {
 
   & .portal-card-header p {
     color: var(--text-secondary);
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    font-size: var(--body-md-regular-font-size);
+    line-height: var(--body-md-regular-line-height);
+    font-weight: var(--body-md-regular-font-weight);
   }
 
   & .portal-card-header::before {
@@ -263,9 +267,9 @@ body[data-subpage="portal"] {
     width: 100%;
     margin: 0;
     padding: 0;
-    font-size: 0.875rem;
-    font-weight: 400;
-    line-height: 1.25rem;
+    font-size: var(--body-md-regular-font-size);
+    line-height: var(--body-md-regular-line-height);
+    font-weight: var(--body-md-regular-font-weight);
   }
 
   & .portal-card ul.portal-card-links li a {
