--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -84,9 +84,9 @@
       & > ul li.opened {
         & > a {
           color: var(--text-primary);
-          font-size: 0.875rem;
-          line-height: 1.25rem;
-          font-weight: 400;
+          font-size: var(--body-md-regular-font-size);
+          line-height: var(--body-md-regular-line-height);
+          font-weight: var(--body-md-regular-font-weight);
           text-decoration: none;
           position: relative;
           transition: none;
