--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -12,6 +12,7 @@
 
   --pal-purple-95: #f9f2fd;
   --pal-purple-93: #f3e7f9;
+  --pal-purple-90: #ead4f2;
   --pal-purple-70: #c289e6;
   --pal-purple-50: #9247c2;
   --pal-purple-40: #7b3ba5;
@@ -48,6 +49,7 @@
   --sys-fg-tertiary: var(--pal-neutral-60);
   --sys-fg-on-color: var(--pal-neutral-100);
   --sys-fg-on-disabled: var(--pal-neutral-70);
+  --sys-fg-disabled: var(--pal-neutral-80);
 
   --sys-bg-surface: var(--pal-neutral-100);
   --sys-bg-minimal: var(--pal-neutral-95);
@@ -60,7 +62,8 @@
   --sys-interactive-strong: var(--pal-purple-40);
   --sys-interactive-highlight: var(--pal-purple-70);
   --sys-interactive-minimal: var(--pal-purple-95);
-  --sys-intercative-subtle: var(  --pal-purple-93);
+  --sys-intercative-subtle: var(--pal-purple-93);
+  --sys-interactive-moderate: var(--pal-purple-90);
 
   --sys-border-minimal: var(--pal-neutral-93);
   --sys-border-subtle: var(--pal-neutral-90);
@@ -100,6 +103,7 @@
   --icon-secondary: var(--sys-fg-secondary);
   --icon-tertiary: var(--sys-fg-tertiary);
   --icon-interactive: var(--sys-interactive-base);
+  --icon-disabled: var(--sys-fg-disabled);
 
   --input-text-placeholder: var(--sys-fg-on-disabled);
 
@@ -118,4 +122,44 @@
   /* -------- Elevation -------- */
 
   --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+  --elevation-md: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
+
+  --body-md-regular-font-size: 0.875rem; /* 14px */
+  --body-md-regular-line-height: 1.25rem; /* 20px */
+  --body-md-regular-font-weight: 400;
+
+  --body-lg-regular-font-size: 1rem; /* 16px */
+  --body-lg-regular-line-height: 1.5rem; /* 24px */
+  --body-lg-regular-font-weight: 400;
+
+  --code-md-font-size: 0.75rem; /* 12px */
+  --code-md-line-height: 1rem; /* 16px */
+  --code-md-font-weight: 400;
+  --code-md-letter-spacing: -0.15px;
+
+  --heading-h1-font-size: 1.875rem; /* 30px */
+  --heading-h1-line-height: 2.5rem; /* 40px */
+  --heading-h1-font-weight: 700;
+
+  --heading-h2-font-size: 1.5rem; /* 24px */
+  --heading-h2-line-height: 2.25rem; /* 36px */
+  --heading-h2-font-weight: 700;
+
+  --heading-h3-font-size: 1.1875rem; /* 19px */
+  --heading-h3-line-height: 1.75rem; /* 28px */
+  --heading-h3-font-weight: 700;
+
+  --heading-h4-font-size: 1rem; /* 16px */
+  --heading-h4-line-height: 1.5rem; /* 24px */
+  --heading-h4-font-weight: 600;
+
+  --button-sm-font-size: 0.875rem; /* 14px */
+  --button-sm-line-height: 1.25rem; /* 20px */
+  --button-sm-font-weight: 600;
+  --button-sm-padding: .375rem .5rem; /* 6px 8px */
+
+  --button-md-font-size: 0.875rem; /* 14px */
+  --button-md-line-height: 1.25rem; /* 20px */
+  --button-md-font-weight: 600;
+  --button-md-padding: .5rem .75rem; /* 8px 12px */
 }
