--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -13,8 +13,8 @@
   }
 
   & .copyright {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    font-size: var(--body-md-regular-font-size);
+    line-height: var(--body-md-regular-line-height);
     color: var(--text-secondary);
     text-align: center;
     width: auto;
@@ -47,8 +47,8 @@
     & li {
       margin: 0;
       padding: 0;
-      font-size: 0.875rem;
-      line-height: 1.25rem;
+      font-size: var(--body-md-regular-font-size);
+      line-height: var(--body-md-regular-line-height);
       font-weight: normal;
       color: var(--text-secondary);
 
