--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,6 +5,13 @@
 
 @import './portal.css';
 
+:root {
+  --page-max-width: 1440px;
+  --content-max-width: 720px;
+  --content-overview-gap: 3rem;
+  --content-padding: 3rem;
+}
+
 .site-body-container {
   padding: 0;
 
@@ -37,30 +44,320 @@
   }
 
   main {
-    display: flex;
+    position: relative;
 
     aside.section-nav-container {
-      width: 272px;
-      padding-right: 2rem;
+      min-width: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
+      width: calc(100vw - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
+      padding: 0 2rem 0 0;
+      top: calc(var(--header-height) + 4.5rem);
+      right: 0;
+      position: fixed;
+
+      &::before {
+        content: 'On this page';
+        text-transform: uppercase;
+        font-size: 0.75rem;
+        font-weight: 700;
+        color: var(--text-primary);
+        line-height: 1rem;
+        letter-spacing: 0.15px;
+        padding-bottom: 0.5rem;
+      }
+
+      & > ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        border-left: 1px solid var(--border-regular);
+        
+
+        & li > a {
+          padding-top: 0.25rem;
+          padding-right: 1rem;
+          padding-bottom: 0.25rem;
+          padding-left: 1rem;
+
+          font-size: var(--body-md-regular-font-size);
+          line-height: var(--body-md-regular-line-height);
+          font-weight: var(--body-md-regular-font-weight);
+          color: var(--text-body);
+          text-decoration: none;
+
+          &:hover {
+            color: var(--text-link-hover);
+            text-decoration: underline;
+          }
+        }
+
+        & li.active > a {
+          font-weight: 600;
+          color: var(--text-body);
+
+          &:hover {
+            color: var(--text-link-hover);
+            text-decoration: underline;
+          }
+        }
+
+        & > li.active > a {
+          position: relative;
+
+          &::before {
+            content: '';
+            position: absolute;
+            left: -1px;
+            top: 0;
+            border-radius: 0;
+            height: 100%;
+            width: 2px;
+            border-left:  2px solid var(--sys-interactive-base);
+          }
+        }
+
+        & > li > ul > li > a {
+          padding-left: 2rem;
+        }
+        & > li > ul > li > ul > li > a {
+          padding-left: 3rem;
+        }
+      }
     }
 
     article {
       margin: 0;
       padding: 0;
       
-      &#content-wrapper {
-        max-width: 720px;
-        margin-right: calc(272px + 2rem);
-      }
-
       &#search-result-wrapper {
         display: none;
       }
 
-      &.topic {
-        display: block;
-        padding: 3rem;
-        width: 100%;
+      &#content-wrapper {
+
+        &.topic {
+          display: block;
+          padding: 1.5rem 3rem 3rem 3rem;
+          width: 100%;
+        }
+        
+        div#topic-content {
+
+          .breadcrumb-container {
+            margin: 0;
+            padding: 0;
+
+            ul.breadcrumb {
+              background: transparent;
+              display: flex;
+              gap: 0.25rem;
+              padding: 0;
+
+              & > li {
+                display: flex;
+                gap: 0.25rem;
+                align-items: center;
+                font-size: var(--body-md-regular-font-size);
+                line-height: var(--body-md-regular-line-height);
+                font-weight: var(--body-md-regular-font-weight);
+                color: var(--text-body);
+
+                &::before {
+                  display: none;
+                }
+
+                &::after {
+                  display: block;
+                  content: '';
+                  width: 1.5rem;
+                  height: 1.5rem;
+                  background-color: var(--icon-disabled);
+                  mask-image: url('../images/icon-chevron-right-24px.svg');
+                  mask-size: cover;
+                  mask-repeat: no-repeat;
+                }
+
+                &:nth-child(1) {
+                  display: none;
+                }
+
+                &:last-child {
+                  display: none;
+                }
+
+                a {
+                  color: var(--text-link);
+                  text-decoration: none;
+                  
+
+                  &:hover {
+                    color: var(--text-link-hover);
+                    text-decoration: underline;
+                  }
+
+                  &:not([href]) {
+                    color: inherit;
+
+                    &:hover {
+                      color: inherit;
+                      text-decoration: none;
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+          & section {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 0;
+          }
+
+          & > section {
+            max-width: var(--content-max-width);
+            margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2));
+            padding: 1.5rem 0 0 0;
+
+            p {
+              margin: 0;
+              font-size: var(--body-md-regular-font-size);
+              line-height: var(--body-md-regular-line-height);
+              font-weight: var(--body-md-regular-font-weight);
+            }
+
+            .title {
+              margin: 0;
+            }
+
+            h1 {
+              font-size: var(--heading-h1-font-size);
+              line-height: var(--heading-h1-line-height);
+              font-weight: var(--heading-h1-font-weight);
+              color: var(--text-primary);
+            }
+
+            h2 {
+              font-size: var(--heading-h2-font-size);
+              line-height: var(--heading-h2-line-height);
+              font-weight: var(--heading-h2-font-weight);
+              color: var(--text-primary);
+              padding-top: 1rem;
+            }
+
+            h3 {
+              font-size: var(--heading-h3-font-size);
+              line-height: var(--heading-h3-line-height);
+              font-weight: var(--heading-h3-font-weight);
+              color: var(--text-primary);
+              padding-top: 1rem;
+            }
+
+            h4 {
+              font-size: var(--heading-h4-font-size);
+              line-height: var(--heading-h4-line-height);
+              font-weight: var(--heading-h4-font-weight);
+              color: var(--text-primary);
+              padding-top: 1rem;
+            }
+
+            a {
+              color: var(--text-link);
+              text-decoration: none;
+
+              &:hover {
+                color: var(--text-link-hover);
+                text-decoration: underline;
+              }
+            }
+
+            code {
+              padding: 0.125rem 0.375rem;
+              display: inline-flex;
+              border-radius: 2px;
+              font-size: var(--code-md-font-size);
+              line-height: var(--code-md-line-height);
+              font-weight: var(--code-md-font-weight);
+              letter-spacing: var(--code-md-letter-spacing);
+              background-color: var(--background-secondary);
+              color: var(--text-body);
+            }
+
+            ul, ol {
+              display: flex;
+              flex-direction: column;
+              gap: 0.5rem;
+              margin: 0;
+              padding: 0 0 0 1.25rem;
+
+              & li {
+                margin: 0;
+                padding: 0;
+
+                ul, ol {
+                  margin-top: 0.5rem;
+                }
+              }
+            }
+
+            .mediaobject {
+              margin-top: 0.5rem;
+
+              img.materialboxed {
+                max-width: 100%;
+                height: auto;
+                box-shadow: var(--elevation-md);
+              }
+            }
+
+            ol.procedure {
+              margin: 0;
+              padding: 0;
+              border: 0;
+              gap: 0;
+              
+              li.step {
+                --procedure-step-margin-left: 0.75rem;
+                --procedure-step-padding-left: 1.25rem;
+
+                padding-left: var(--procedure-step-padding-left);
+                margin-left: var(--procedure-step-margin-left);
+                border-left: 1px solid var(--sys-interactive-moderate);
+                padding-bottom: .5rem;
+
+                & > p {
+                  font-size: var(--body-lg-regular-font-size);
+                  line-height: var(--body-lg-regular-line-height);
+                  font-weight: var(--body-lg-regular-font-weight);
+                }
+
+                &::before {
+                  position: absolute;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  flex-shrink: 0;
+                  margin: 0;
+                  padding: 0;
+                  width: 1.5rem;
+                  height: 1.5rem;
+                  border-radius: 1rem;
+                  background-color: var(--sys-interactive-subtle);
+                  border: 1px solid var(--sys-interactive-moderate);
+                  font-size: 0.75rem;
+                  line-height: 1rem;
+                  font-weight: 700;
+                  color: var(--sys-interactive-strong);
+                  transform: translate(calc(-1 * (var(--procedure-step-padding-left) + var(--procedure-step-margin-left))), 0);
+                }
+
+                &:last-child {
+                  border: 0;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
