--- a/src/css/hub.css
+++ b/src/css/hub.css
@@ -8,8 +8,7 @@
     }
   
     main article#content-wrapper {
-      max-width: 100%;
-      margin-right: 0;
+      padding-top: 3rem;
 
       div.itemizedlist.explore,
       div.intro-container {
@@ -17,9 +16,12 @@
       }
 
       #topic-content > section {
+        max-width: 100%;
         padding: 0;
+        margin: 0;
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
         gap: 1.5rem;
 
         div.itemizedlist.index-container {
@@ -32,8 +34,8 @@
           h2 {
             padding: 0.75rem 0;
             color: var(--text-secondary);
-            font-size: 0.875rem;
-            line-height: 1.25rem;
+            font-size: var(--body-md-regular-font-size);
+            line-height: var(--body-md-regular-line-height);
             font-weight: 700;
             border-bottom: 1px solid var(--border-minimal);
           }
@@ -67,8 +69,9 @@
               }
 
               span.box-para {
-                font-size: 0.875rem;
-                line-height: 1.25rem;
+                font-size: var(--body-md-regular-font-size);
+                line-height: var(--body-md-regular-line-height);
+                font-weight: var(--body-md-regular-font-weight);
                 color: var(--text-secondary);
               }
 
@@ -124,13 +127,14 @@
                 display: inline-block;
                 width: auto;
                 margin: 0;
-                padding: 0.5rem 0.75rem;
-                font-weight: 600;
+                padding: var(--button-md-padding);
                 text-align: center;
                 border-radius: 0.25rem;
 
-                font-size: 0.875rem;
-                line-height: 1.25rem;
+                font-size: var(--button-md-font-size);
+                line-height: var(--button-md-line-height);
+                font-weight: var(--button-md-font-weight);
+
                 letter-spacing: 0;
                 color: var(--button-primary-fg);
                 background-color: var(--button-primary-bg);
